# data_analysis

./: .gitattributes  .gitignore  README.md  pyproject.toml
data/: aespa.txt  appreply.csv  appreply_2.csv  cdata.csv  cdata_nohead.csv  kr3_raw.tsv  mpg.csv  mytext.txt  sample_data.csv  공공자전거 대여소 정보.csv  따릉이_월별정보_전처리_데이터(25_7_12).csv  서울특별시 공공자전거 이용정보(월별)_25.7-12.csv
notebook/: 01_파이썬_기초_문법(변수,자료형).ipynb  01_파이썬_기초_문법(변수,자료형)_blank.ipynb  01_파이썬_기초_문법(변수,자료형)_보충.ipynb  02_반복문_과제_답안.ipynb  02_조건문_과제_답안.ipynb  02_파이썬_기초_문법(제어문).ipynb  03_파이썬_기초_문법(함수).ipynb  04_데이터_분석_기초_넘파이.ipynb  04_데이터_분석_기초_넘파이_blank.ipynb  04_데이터_분석_기초_넘파이_보충.ipynb  05_데이터_분석_기초_판다스.ipynb  05_데이터_분석_기초_판다스_blank.ipynb  05_데이터_분석_기초_판다스_보충.ipynb  05_판다스_과제_답안.ipynb  06_데이터_분석_기초_실습.ipynb  07_탐색적_데이터_분석_가이드.ipynb  08_탐색적_데이터_분석_실습_따릉이.ipynb  09_텍스트_데이터_분석_토크나이징.ipynb  09_텍스트_데이터_분석_토크나이징_보충.ipynb  10_텍스트_데이터_분석_장바구니분석.ipynb  11_텍스트_데이터_분석_LDA.ipynb  13_데이터_수집_OPEN_API copy.ipynb  13_데이터_수집_OPEN_API.ipynb  14_데이터_수집_BeautifulSoup.ipynb  15_데이터_수집_Selenium.ipynb  문제원인찾기.ipynb  테스트용.ipynb
notebook/homework/: 13_데이터_수집_OPEN_API.ipynb
notebook/review/: 데이터_분석_기초.ipynb
